--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# documentation files (exclude from version control)
 .APP_DESCRIPTION.md
 .CODE_ARCHITECTURE_GUIDE.md
+.SEO_OPTIMIZATION_GUIDE.md
